--- a/package.json
+++ b/package.json
@@ -39,9 +39,12 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@react-three/drei": "^9.88.7",
-    "@react-three/fiber": "^8.13.0",
+    "@react-spring/three": "^10.0.1",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
+    "@react-three/postprocessing": "^2.19.1",
     "@tanstack/react-query": "^5.56.2",
+    "@types/three": "^0.178.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -50,7 +53,9 @@
     "framer-motion": "^12.6.3",
     "gsap": "^3.12.7",
     "input-otp": "^1.2.4",
+    "leva": "^0.10.0",
     "lucide-react": "^0.462.0",
+    "motion": "^12.23.6",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -62,9 +67,11 @@
     "react-type-animation": "^3.2.0",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^2.5.2",
+    "sweetalert2": "^11.22.2",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.149.0",
+    "three": "^0.152.2",
+    "tone": "^14.9.17",
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
   },
